# tradingquant

./: CMakeLists.txt  Prism.py  README.md  auto_run_optimizer.py  portfolio_optimizer - Copy.py  portfolio_optimizer.cpp  portfolio_optimizer.py  prism_client.h  run_optimizer.bat  start_optimizer.bat
